--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-openid-connect": "^2.5.0",
+    "https": "^1.0.0",
     "mongoose": "^6.0.6",
     "nodemon": "^2.0.12",
     "path": "^0.12.7"
