--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ lerna-debug.log*
 #MacOS
 .DS_Store
 
+*Https
+server.cert
+server.key
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
