--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,12 @@ lerna-debug.log*
 #MacOS
 .DS_Store
 
-*Https
+#Https
 server.cert
 server.key
+
+#Python
+__pycache__
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
