--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,8 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "express-openid-connect": "^2.5.0",
     "https": "^1.0.0",
+    "jwks-rsa": "^2.0.4",
     "mongoose": "^6.0.6",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
